2018-11-23 Franz Holzinger <franz@ttproducts.de>

    * extract the files tx_ratings_iplog.php from ext_tables.php and tca.php
    * extract the files tx_ratings_data.php from ext_tables.php and tca.php
    * Replace t3lib_extMgm by \TYPO3\CMS\Core\Utility\ExtensionManagementUtility
    * Do not call t3lib_div::loadTCA.
    * Do not require t3lib_extMgm::isLoaded("tt_news") in ext_localconf.php.
    * Ready for TYPO3 7 and 8
    * Remove the modfunc1 backend module which had no functionality.
    * Replace the variable $_EXTKEY by 'ratings' because this variable will not be supported by TYPO3 in the future.

2018-11-22 Franz Holzinger <franz@ttproducts.de>

    * move class.tx_ratings_ajax.php -> Classes/Api/Ajax.php
    * move class.tx_ratings_api.php -> Classes/Api/Api.php
    * move class.tx_ratings_ttnews.php -> Classes/Api/TtNews.php
	* New marker: add the marker ###RATING_VALUE###
	* New extension comment: TYPO3 mailinglists are not used so often. It is better to be notified by typo3.slack.com.

2014-03-19 v2.0.3 Leonie Philine Bitto <leonie@netcreators.nl>

	* New version number for renewed TER upload, including the bugfixes
	from v2.0.1.

2014-03-19 v2.0.1 Leonie Philine Bitto <leonie@netcreators.nl>

	* Fix: Changed JS function call in ratingsMicrodata from camelCase to underscored tx_ratings_submit.
	* Fix: Changed $() into jQuery() in res/rating.jquery.js to allow for jQuery.noConflict() setups.

2014-03-07 v2.0.0 Leonie Philine Bitto <leonie@netcreators.nl>

	First TYPO3 6 compatibility adjustments:
	* Applied requested changes from http://forge.typo3.org/attachments/24829/patch_ratings_for_6.2.diff.
	* Fixed t3lib_div::readLL{XML}file().
	* Release version 2.0.0.

2013-10-29 v1.1.1 Simon Schmidt <sfs@marketing-factory.de>

	* extension cleanup
	* bugfix "Changing tx_ratings_data record leads to rating and vote_count of 10" (thanks to Rik Willems)
	* Release version 1.1.1

2013-10-29 v1.1.0 Simon Schmidt <sfs@marketing-factory.de>
