@@ -1,5 +1,6 @@
 2018-11-23 Franz Holzinger <franz@ttproducts.de>
 
+    * add the EidRunner.php script
     * extract the files tx_ratings_iplog.php from ext_tables.php and tca.php
     * extract the files tx_ratings_data.php from ext_tables.php and tca.php
     * Replace t3lib_extMgm by \TYPO3\CMS\Core\Utility\ExtensionManagementUtility
